// Copyright (c) 2018, Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/type/latlng.proto";

package kiosk;

service Display {

  // Create a kiosk. This enrolls the kiosk for sign display.
  rpc CreateKiosk(Kiosk) returns (Kiosk) {}

  // List active kiosks.
  rpc ListKiosks(google.protobuf.Empty) returns (ListKiosksResponse) {}

  // Get a kiosk.
  rpc GetKiosk(GetKioskRequest) returns (Kiosk) {}

  // Delete a kiosk.
  rpc DeleteKiosk(DeleteKioskRequest) returns (google.protobuf.Empty) {}

  // Create a sign. This enrolls the sign for sign display.
  rpc CreateSign(Sign) returns (Sign) {}

  // List active signs.
  rpc ListSigns(google.protobuf.Empty) returns (ListSignsResponse) {}

  // Get a sign.
  rpc GetSign(GetSignRequest) returns (Sign) {}

  // Delete a sign.
  rpc DeleteSign(DeleteSignRequest) returns (google.protobuf.Empty) {}

  // Set a sign for display on one or more kiosks.
  rpc SetSignForKiosks(SetSignForKiosksRequest) returns (google.protobuf.Empty) {}

  // Get the sign that should be displayed on a kiosk.
  rpc GetSignForKiosk(GetSignForKioskRequest) returns (Sign) {}

  // Get signs that should be displayed on a kiosk. Streams.
  rpc GetSignsForKiosk(GetSignForKioskRequest) returns (stream Sign) {}
}

// Describes a hardware device that can display signs.
message Kiosk {
  string id = 1;              // unique id
  string device_name = 2;     // name of device hardware
  ScreenSize size = 3;        // screen size
  google.type.LatLng location = 4;        // kiosk location
  google.protobuf.Timestamp create_time = 5;
}

// Describes a digital sign.
// Signs can include text, images, or both.
message Sign {
  string id = 1;     			// unique id
  string text = 2;   			// text to display
  bytes image = 3;   			// image to display
  google.protobuf.Timestamp create_time = 4;
}

// Represents the size of a screen in pixels.
message ScreenSize {
  int32 width = 1;              // screen width
  int32 height = 2;             // screen height
}


message ListKiosksResponse {
  repeated Kiosk kiosks = 1;
}

message GetKioskRequest {
  string id = 1;
}

message DeleteKioskRequest {
  string id = 1;
}

message ListSignsResponse {
  repeated Sign signs = 1;
}

message GetSignRequest {
  string id = 1;
}

message DeleteSignRequest {
  string id = 1;
}

message SetSignForKiosksRequest {
  repeated string kiosk_id = 1;
  string sign_id = 2;
}

message GetSignForKioskRequest {
  string id = 1;
}

